<resources>
    <string name="app_name">CentrumMedyczne</string>
    <string name="header_text">Centrum Medyczne</string>
    <string name="login_text">Zaloguj</string>
    <string name="city">Miasto</string>

    <string name="preLoginDefault">Aby uzyskać dostęp do wszystkich funkcji zaloguj się za pomoca danych uzyskanych na wizycie</string>
    <string name="preLoginFindMore">Aby uzyskać pełny dostęp do systemu zarejestruj się w jednej z placówek lub pod nr telefonu 123456789 </string>

    <string name="sortuj">Sortuj</string>
    <string name="filtruj">Filtruj</string>
    <string name="rednia_ocena">Średnia ocena</string>
    <string name="czas_oczekiwania_na_wizyt">Czas oczekiwania na wizytę</string>
    <string name="liczba_opinii">Liczba opinii</string>
    <string name="liczba_ocen">Liczba ocen</string>
    <string name="cena_za_wizyt">Cena za wizytę</string>
    <string name="odleg_o">Odległość</string>
    <string name="zastosuj">Zastosuj</string>

    <string name="rate_doc">Jak oceniasz wizytę?</string>
    <string name="add_opinion">Napisz co sądzisz o wizycie:</string>
    <string name="cancel">Anuluj</string>
    <string name="publish">Opublikuj</string>
    <string name="c_e_n_t_r_u_m">C E N T R U M</string>
    <string name="medyczne">MEDYCZNE</string>


    <string name="todo">TODO</string>
    <string name="zaloguj">Zaloguj</string>
    <string name="kontynuuj_jako_go">Kontynuuj jako gość</string>
    <string name="moje_konto">Moje konto</string>
    <string name="zapytaj_lekarza">Zapytaj lekarza</string>
    <string name="szukaj_wizyty">Szukaj wizyty</string>
    <string name="zaplanowane_wizyty">Zaplanowane wizyty</string>
    <string name="edytuj_dane_osobowe">Edytuj dane osobowe</string>
    <string name="ulubieni_lekarze">Ulubieni lekarze</string>
    <string name="historia_wizyt">Historia wizyt</string>
    <string name="moje_leki">Moje leki</string>
    <string name="wyloguj_si">Wyloguj się</string>
    <string name="recepty">Moje recepty</string>
    <string name="header">header</string>
    <string name="nie_pami_tasz_has_a">Nie pamiętasz hasła?</string>
    <string name="reset_insr">Wpisz swój adres e-mail. Następnie postępuj zgodnie z instrukcją przysłaną na podany adres.</string>
    <string name="send_again">Wyślij email ponownie</string>
    <string name="profile_pic">profile pic</string>
    <string name="anonimowa">Anonimowa</string>
    <string name="notFoundEmail">Użytkownik o podanym adresie nie istnieje</string>
    <string name="wrongPassword">Podane hasło jest błędne</string>
    <string name="networkError">Wystąpił błąd sieci</string>
    <string name="incorrect_mobile">Niepoprawny numer telefonu</string>
    <string name="changes_saved">Zapisano zmiany</string>
    <string name="phone_change_error">Błąd zmiany telefonu</string>
    <string name="address_change_error">Błąd zmiany adresu</string>
    <string name="incorrect_current_password">Nieudana weryfikacja obecnego hasła</string>
    <string name="pass_change_error">Błąd zmiany hasła</string>
    <string name="pass_updated">Hasło zaaktualizowane</string>
    <string name="different_passwords">Podane hasła różnią się</string>
    <string name="incomplete_inputs">Niekompletne pola</string>
    <string name="street">Ulica</string>
    <string name="building_number">Numer budynku</string>
    <string name="apartment">Numer lokalu</string>
    <string name="postal_code">Kod pocztowy</string>
    <string name="save_changes">Zapisz</string>
    <string name="password_change">Zmiana hasła</string>
    <string name="phone">Telefon</string>
    <string name="searching">wyszukiwanie</string>
    <string name="patient_profile">profil pacjenta</string>
    <string name="settings">Ustawienia</string>
    <string name="header_image">header_image</string>
    <string name="personal_data_change">Zmiana danych osobowych</string>
    <string name="current_passsword">Obecne hasło</string>
    <string name="new_password">Nowe hasło</string>
    <string name="repeat_password">Powtórz nowe hasło</string>
    <string name="change_password">Zmień hasło</string>
    <string name="ready">Gotowe</string>
    <string name="incorrect_postal_code">Wpisano niepoprawny kod pocztowy</string>
    <string name="incorrect_pesel">Wpisano niepoprawny PESEL</string>
    <string name="required_email">Wymagany adres email</string>
    <string name="register_error">Błąd rejestracji</string>
    <string name="empty_password">Hasło nie może być puste</string>
    <string name="empty_email_input">Podaj adres email</string>
    <string name="email_sent">Wysłano email</string>
    <string name="send_error">Błąd wysyłania</string>
    <string name="login_successful">Zalogowano poprawnie</string>
    <string name="incorrect_email_or_password">Niepoprawny email lub hasło</string>
    <string name="incorrect_email">Wpisano niepoprawny adres email</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh augue, suscipit a, scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus. Phasellus pharetra nulla ac diam.</string>
    <string name="patient_account">profil pacjenta</string>
    <string name="back_to_results">Powrót do listy lekarzy</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="rates_avg">Średnia ocen: </string>
    <string name="doc_price">Cena za wizytę: </string>
    <string name="doctor_added_to_favorites">Dodano lekarza do ulubionych</string>
    <string name="doctor_deleted_from_favourites">Usunięto lekarza z ulubionych</string>
    <string name="opinions_t">Opinie: </string>
    <string name="no_rates">Ten lekarz nie ma jeszcze wystawionych ocen</string>
    <string name="no_opinions">Ten lekarz nie ma jeszcze opinii</string>
    <string name="remind_me_later">Przypomnij później</string>
    <string name="no_opinion">Nie wystawiaj opinii</string>
    <string name="search_results">Wyniki wyszukiwania</string>
    <string name="issued_by">Wystawił:</string>
    <string name="rate_now">Oceń teraz</string>
    <string name="patients_note">Zalecenie lekarza:</string>
    <string name="your_review">Twoja opinia:</string>
    <string name="your_rating">Twoja ocena:</string>
    <string name="example_doc_name">dr Janusz Kowalski</string>
    <string name="example_spec">Dermatolog</string>
    <string name="example_cm">Centrum Medyczne nr 11</string>
    <string name="example_address">Kraków, Długa 12</string>
    <string name="profil_pacjenta">profil pacjenta</string>
    <string name="more_docs">Więcej lekarzy</string>
    <string name="faviconfull">favIconFull</string>
    <string name="doc_profile">Profil lekarza</string>
    <string name="no_fav_docs">Brak ulubionych lekarzy</string>
    <string name="search_icon">wyszukiwanie</string>
    <string name="header_gradient">header_gradient</string>
    <string name="back_to_fav_docs">Powrót do ulubionych</string>
    <string name="enter_doc_name">Podaj imię i nazwisko lekarza</string>
    <string name="med_trade_name">Nazwa leku</string>
    <string name="example_med_name">Adatox</string>
    <string name="example_active_substance">Doksazosyna 5mg</string>
    <string name="example_drug_form">tabletki</string>
    <string name="no_my_meds">Brak wypisanych leków</string>
    <string name="no_history">Brak histori wizyt</string>
    <string name="newest_history">Od najnowszych</string>
    <string name="oldest_history">Od najstarszych</string>
    <string name="example_date">23.09.2020</string>
    <string name="rate_visit">Ocena wizyty</string>
    <string name="your_opinion">Twoja opinia...</string>
    <string name="opinion_added">Dodano opinię</string>
    <string name="example_issue_date">Data wystawienia: 23.08.2020</string>
    <string name="example_expire_after">Ważna do: 23.09.2020</string>
    <string name="example_datetime">23.11.2020 godz. 9:00</string>
    <string name="are_you_sure_text">Czy na pewno chcesz zrezygnować?</string>
    <string name="go_to_messages">Wyślij wiadomość</string>
    <string name="your_message">Twoja wiadomość...</string>
    <string name="book_appointment">Umów wizytę</string>
    <string name="show_more">Wyświetl więcej</string>
    <string name="back_to_doc_profile">Powrót do profilu lekarza</string>
    <string name="avaliable_appointment_dates">Dostępne terminy:</string>
    <string name="no_prescriptions">Brak recept do wyświetlenia</string>
    <string name="liczba_recenzji">Liczba recenzji</string>
    <string name="look_for_doctor">Znajdź lekarza</string>
    <string name="specialization">Specjalizacja</string>
    <string name="serach">Szukaj</string>
    <string name="centrum_medyczne">Centrum Medyczne</string>


    <string-array name="sort_options">
        <item>Sortuj według</item>
        <item>Średnia ocena</item>
        <item>Liczba ocen</item>
        <item>Liczba opinii</item>
        <item>Cena za wizytę</item>
    </string-array>

    <string-array name="sort_direction">
        <item>Kolejność sortowania</item>
        <item>Rosnąco</item>
        <item>Malejąco</item>
    </string-array>

    <string-array name="doctors">
        <item>dr Jan Kowalski</item>
        <item>dr Jan Nowak</item>
        <item>dr Barbara Kowalska</item>
        <item>dr Marta Nowak</item>
        <item>dr Janina Miła</item>
        <item>dr Joanna Kowalska</item>
        <item>dr Katarzyna Biela</item>
        <item>dr Małgorzata Droga</item>
        <item>dr Natalia Mróz</item>
        <item>dr Katarzyna Poręba</item>
    </string-array>

    <string-array name="description">
        <item>This is random description</item>
        <item>This is random description</item>
        <item>This is random description</item>
        <item>This is random description</item>
        <item>This is random description</item>
        <item>This is random description</item>
        <item>This is random description</item>
        <item>This is random description</item>
        <item>This is random description</item>
        <item>This is random description</item>
    </string-array>
</resources>