<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SortFilterActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        android:textAlignment="center"
        android:text="@string/sortuj" />

    <Spinner
        android:id="@+id/sortOptionSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:entries="@array/sort_options"

        />

    <Spinner
        android:id="@+id/sortDirectionSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:entries="@array/sort_direction"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"

        android:layout_marginBottom="10dp"
        android:textAlignment="center"

        android:text="@string/filtruj" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:text="@string/rednia_ocena" />


    <me.bendik.simplerangeview.SimpleRangeView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/averageBar"
        app:count="5"
        app:start="0"
        app:end="5"
        />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:text="@string/czas_oczekiwania_na_wizyt" />

    <me.bendik.simplerangeview.SimpleRangeView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/waitTimeBar"
        app:count="30"
        app:start="0"
        app:end="30"
        />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:text="@string/liczba_opinii" />


    <me.bendik.simplerangeview.SimpleRangeView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/opinionsBar"
        app:count="100"
        app:start="0"
        app:end="100"
        />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:text="@string/liczba_ocen" />

    <me.bendik.simplerangeview.SimpleRangeView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ratesBar"
        app:count="100"
        app:start="0"
        app:end="100"
        />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:text="@string/cena_za_wizyt" />

    <me.bendik.simplerangeview.SimpleRangeView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/priceBar"
        app:count="100"
        app:start="0"
        app:end="100"        />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:text="@string/odleg_o" />

    <me.bendik.simplerangeview.SimpleRangeView
        android:id="@+id/distanceBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:count="100"
        app:start="0"
        app:end="100"/>

    <Button
        android:id="@+id/applyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zastosuj" />
</LinearLayout>