<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fair"
    tools:context=".MoreDocSActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_header_gradient"
            android:contentDescription="@string/header_gradient" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/verdana"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:text="@string/more_docs"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/accountImage"
            android:layout_width="69dp"
            android:layout_height="56dp"
            android:contentDescription="@string/profil_pacjenta"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_account_box_white" />

        <ImageView
            android:id="@+id/searchIcon"
            android:layout_width="53dp"
            android:layout_height="45dp"
            android:contentDescription="@string/search_icon"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toStartOf="@+id/accountImage"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_search_white_box" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <AutoCompleteTextView
                android:id="@+id/moreDocsEditText"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:background="@drawable/white_button"
                android:padding="10sp"
                android:fontFamily="@font/verdana"
                android:textColorHint="@color/blue"
                android:textColor="@color/navy"
                android:hint="@string/enter_doc_name" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/moreDocsRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

            </androidx.recyclerview.widget.RecyclerView>

            <Button
                android:id="@+id/backToFavDocs"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textAllCaps="false"
                android:fontFamily="@font/verdana"
                android:textColor="@color/navy"
                android:textSize="18sp"
                android:background="@drawable/lagoon_button"
                android:text="@string/back_to_fav_docs" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>