<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fair"
    android:orientation="vertical"
    tools:context=".FavDocsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/header_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_header_thin" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/verdana"
            android:text="@string/ulubieni_lekarze"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/accountImageFav"
            android:layout_width="69dp"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/profil_pacjenta"
            android:onClick="onClickAccountFav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_account_box_white" />

        <ImageView
            android:id="@+id/searchIconFav"
            android:layout_width="53dp"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/search_icon"
            android:onClick="onClickSearchFav"
            app:layout_constraintEnd_toStartOf="@+id/accountImageFav"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_search_white_box" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/noFavDocsFound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/white_background"
                android:fontFamily="@font/verdana"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/no_fav_docs"
                android:textColor="@color/navy"
                android:textSize="20sp"
                android:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/favDocRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

            </androidx.recyclerview.widget.RecyclerView>

            <Button
                android:id="@+id/findMoreDocs"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_margin="20dp"
                android:background="@drawable/lagoon_button"
                android:fontFamily="@font/verdana"
                android:onClick="onClickSearchFav"
                android:text="@string/more_docs"
                android:textAllCaps="false"
                android:textColor="@color/navy"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>