<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fair"
    android:orientation="vertical"
    tools:context=".MyMedsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/header_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_header_gradient" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/verdana"
            android:text="@string/moje_leki"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/accountImageMyMeds"
            android:layout_width="69dp"
            android:layout_height="56dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/profil_pacjenta"
            android:onClick="onClickAccountIconMyMeds"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_account_box_white" />

        <ImageView
            android:id="@+id/searchIconMyMeds"
            android:layout_width="53dp"
            android:layout_height="45dp"
            android:layout_marginTop="36dp"
            android:contentDescription="@string/search_icon"
            android:onClick="onClickSearchIconMyMeds"
            app:layout_constraintEnd_toStartOf="@+id/accountImageMyMeds"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_search_white_box" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/noMyMeds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/white_background"
                android:fontFamily="@font/verdana"
                android:padding="20dp"
                android:textAlignment="center"
                android:text="@string/no_my_meds"
                android:textColor="@color/navy"
                android:textSize="20sp"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/myMedsRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>